[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fsutilz"
authors = [{name = "KOLANICH"}]
description = "Just a set of functions and classes fixing some problems in shutil API and features."
readme = "ReadMe.md"
keywords = ["package", "location"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/prebuilder/fsutilz.py"}
requires-python = ">=3.4"
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
packages = ["fsutilz"]
include-package-data = false

[tool.setuptools_scm]
